# pySigma-backend-logpoint

./: README.md  pyproject.toml
.github/workflows/: test_conversion.yml
examples/: logpoint_conversion_samples.py
sigma/backends/logpoint/: logpoint.py
tests/: test_backend_logpoint.py  test_real_rules.py
