[tool.poetry]
name = "pysigma-backend-logpoint"
version = "0.3.0"
description = "pySigma Logpoint backend"
readme="README.md"
authors = ["Surya Majhi <suryamajhi20@gmail.com>", "Swachchhanda Shrawan Poudel <swachchhandashrawan@gmail.com>"]
license = "LGPL-2.1-only"
repository = "https://github.com/logpoint/pySigma-backend-logpoint"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.9"
pysigma = "^0.11.23"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pre-commit = "^3.5"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
coverage = "^7.5.3"
defusedxml = "^0.7.1"

[tool.poetry.plugins."sigma.backends"]
logpoint = "sigma.backends.logpoint:backends"

[tool.poetry.plugins."sigma.pipelines"]
logpoint_windows = "sigma.pipelines.logpoint:pipelines"
logpoint_o365 = "sigma.pipelines.logpoint:pipelines"
logpoint_azure = "sigma.pipelines.logpoint:pipelines"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
